cmake_minimum_required(VERSION 3.16)
project(graph_searcher LANGUAGES CXX)
include_directories(.)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -march=native -fopenmp -fno-rtti -fno-exceptions")
include_directories(graph_searcher)
add_executable(main main.cc)
target_link_libraries(main uring)
